--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -29,7 +29,7 @@
             android:id="@+id/explore_page_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Achievements Made by You"
+            android:text="Explore People Stories"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
